--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <!-- <script src="/js/app1.js"></script> -->
-    <script src="/js/app2.js"></script>
+    <!-- <script src="/js/app2.js"></script> -->
 </body>
 
 </html>
